CSS issue, cutting off content on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     max-width:100%;
   }
   
   body {
     margin: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     max-width:100%;
     display: flex;
     flex-direction: column;
